# cloud-gameserver

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  terragrunt.hcl
.github/scripts/: auth.sh  deploy.sh
.github/workflows/: base-image.yml  consumer.yml  game-server-watcher.yml  main.yml  react-frontend.yml  strapi.yml
async-server-provisioner/: .eslintrc  .gitignore  .prettierrc  Dockerfile  Dockerfile-dev  package-lock.json  package.json  tsconfig.json  tslint.json
async-server-provisioner/config/: custom-environment-variables.yml  default.yml
async-server-provisioner/src/: ServiceLocator.ts  helper.ts  index.ts
backend/: .strapi-updater.json  Dockerfile  Dockerfile-prod-be  Dockerfile-prod-fe  docker-compose.yaml  package-lock.json  package.json
backend-old/: .strapi-updater.json  Dockerfile  Dockerfile-prod-be  package-lock.json  package.json
backend-old/config/: database.js  middleware.js  plugins.js  server.js
backend/config/: admin.js  database.js  hook.js  plugins.js  server.js
backend/prod-patches/: @strapi+admin+4.24.0.patch
backend/src/: index.js
documents/: gameserver_cloud_db_design.mwb  general_setup.drawio
game-server-watcher/: .gitignore  Cargo.toml  Dockerfile  example-config.yaml  go.mod  go.sum
game-server-watcher-old/: .gitignore  Cargo.toml
game-server-watcher-old/src/routes/: types.rs  watcher_details.rs  watchers.rs
game-server-watcher/src/: clap-config.yml  (+2 more)
react-frontend/: .eslintrc  Dockerfile  README.md  package-lock.json  package.json
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
(+334 files in other folders)
